--- a/build.gradle
+++ b/build.gradle
@@ -1,11 +1,14 @@
 buildscript {
+    ext {
+        agp_version = '8.8.0'
+    }
     dependencies {
         classpath 'com.google.gms:google-services:4.4.0'
     }
 }
 // Top-level build file where you can add configuration options common to all sub-projects/modules.
 plugins {
-id 'com.android.application' version '8.9.1' apply false
+id 'com.android.application' version '8.8.0' apply false
 
 
 }
